--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Hard work</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/hamburgers.css">
 	<link rel="stylesheet" type="text/css" href="js/index.js">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 </head>
+
 <body>
 
 <div class="container">
@@ -24,7 +26,7 @@
 						<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
 							<a href=""><img src="img/facebook icon.png" alt="facebook"></a>
-							<a href=""><img src="img/twitter icon.png" alt="linkedin"></a>
+							<a href=""><img src="img/twitter icon.png" alt="twitter"></a>
 							<a href=""><img src="img/linkedin icon.png" alt="linkedin"></a>
 							<a href=""><img src="img/g.png" alt="googl"></a>
 						</div>
@@ -256,9 +258,6 @@
 							<p>timeline</p>
 						</div>
 						<div class="flex_center_three_link_box">
-<!-- 								<div>
-									<img src="img/arrow_white.svg" alt="arrow">
-								</div> -->
 								<div class="flex_center_three-link hide_arow">
 									<ul>
 										<li><a href="" class="second-link-arrow">2014</a></li>
@@ -422,7 +421,7 @@
 							<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
 							<a href=""><img src="img/facebook icon.png" alt="facebook"></a>
-							<a href=""><img src="img/twitter icon.png" alt="linkedin"></a>
+							<a href=""><img src="img/twitter icon.png" alt="twitter"></a>
 							<a href=""><img src="img/linkedin icon.png" alt="linkedin"></a>
 							<a href=""><img src="img/g.png" alt="googl"></a>
 						</div>
