--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 </head>
-
 <body>
-
 <div class="container">
 
 <!--start HEADER BOX OF BLOCK WITH HOVER EFFECT -->
 
 		<div class="flex_heder">
-
 			<div class="one_row">
-
 				<div class="one">
 					<div class="logo_box">
 						<img src="img/DSGN.png" class="DSGN" alt="logo">
@@ -35,7 +31,6 @@
 						<img src="img/chairs.jpg" class="cher_logo" alt="cher">
 					</div>
 				</div>
-
 				<div class="two line">
 
 <!-- 	Nav menu activ -->
@@ -46,11 +41,9 @@
 					      <a href="#studio">STUDIO</a>
 					      <a href="#news">NEWS</a>
 					    </nav>
-					    
 					    <a href="#" class="menu-btn">
 					      <span></span>
-					    </a>
-					    
+					    </a>				
 					  </div>
 					</div>
 					  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
@@ -66,13 +59,9 @@
 					</div>
 				</div>
 			</div>
-
 			<div class="bl_row">
-
 				<div class="two_row">
-
 					<div class="elem_first">
-
 						<div class="three line" id="projects">
 							<div class="link_box_three">
 								<div>
@@ -84,13 +73,11 @@
 										<li><a href="javasctipt:void=0" class="fifth-link-arrow">Studio Lab</a></li>
 									</ul>
 								</div>
-							</div>	
-									<!-- <img src="img/line.svg" class="line" alt="line"> -->			
+							</div>				
 							<div>
 								<p >PROJECTS</p>
 							</div>
 						</div>
-
 						<div class="four">
 							<div class="four_tex_column">
 								<div class="text_top_four">
@@ -108,7 +95,6 @@
 							</div>
 						</div>
 					</div>
-
 					<div class="elem_second">
 						<div class="five">
 							<div class="five_tex_column">
@@ -148,8 +134,7 @@
 							</div>	
 						</div>
 					</div>
-				</div>
-		
+				</div>		
 				<div class="three_row">
 						<div class="seven">
 							<div class="seven_tex_column">
@@ -208,8 +193,7 @@
 						</div>		
 				</div>
 			</div>
-		</div>
-			
+		</div>			
 			<div class="flex_center_top">
 				<div class="flex_center_one">
 					<div class="flex_center_on">
@@ -230,7 +214,6 @@
 								</div>
 					</div>
 				</div>
-
 				<div class="flex_center_two">
 						<div class="flex_center_two_column">
 							<div class="f_c_o">
@@ -251,7 +234,6 @@
 							</div>
 						</div>
 				</div>
-
 				<div class="flex_center_three line">
 					<div class="flex_center_three_cont">
 						<div class="flex_center_three_title">
@@ -278,7 +260,6 @@
 				<div class="flex_center_four line" id="studio">
 					<p>studio</p>
 				</div>
-
 				<div class="awards">
 					<div class="flex_center_five">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.<br><br>
@@ -290,15 +271,14 @@
 						Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.
 						</p>
 					</div>
-
 					<div class="flex_center_six">
 						<div class="img_and_btn_six">
 							<div class="flex_center_six_awards">
 				          		<img src="img/room.jpg" alt="img">
 				          		<p>awards</p>
 							</div>
-				          	<div class="line"></div>
-
+				          	<div class="line">
+						</div>
 							<div class="flex_center_six_text_right">
 					            <div class="flex_center_six_tex_one"><p>Aenean ullamcorper porta nisl,<br> ac lobortis elit commodo placerat.Vivamus </p>
 					            </div>
@@ -306,7 +286,6 @@
 					          	<p>Aenean ullamcorper porta nisl,<br> ac lobortis elit commodo placerat.Vivamus </p>
 					          	</div>
 							</div>
-
         				</div>
 					</div>
 				</div>
@@ -343,7 +322,6 @@
 							</div>						
 						</div>	
 					</div>
-
 					<div class="pipl_two">
 						<img src="img/mario_bellini.jpg" alt="mario_bellini">
 						<p><b>mario bellini</b><br>designer</p>
@@ -360,7 +338,6 @@
 							</div>						
 						</div>	
 					</div>
-
 					<div class="pipl_three">
 						<img src="img/patricia_urquiola.jpg" alt="patricia_urquiola">
 						<p><b>patricia urquiola</b><br>designer</p>
@@ -415,7 +392,6 @@
 						<p>+64 9 345 6758<br>info@dsgn-studio.com</p>
 						<p>© 2014 DSGN. All rights reserved - Desingned by theuncreativelab.com</p>
 					</div>
-
 					<div class="logo_box2">
 							<img src="img/DSGN.png" class="DSGN" alt="logo">
 							<p>associates<br>studio<br>design</p>	
@@ -426,13 +402,10 @@
 							<a href=""><img src="img/g.png" alt="googl"></a>
 						</div>
 					</div>
-			</div>
-			
+			</div>			
 		</div>
 <!--block with map end-->		
 </div>
-
-
 <script>
     var forEach=function(t,o,r){if("[object Object]"===Object.prototype.toString.call(t))for(var c in t)Object.prototype.hasOwnProperty.call(t,c)&&o.call(r,t[c],c,t);else for(var e=0,l=t.length;l>e;e++)o.call(r,t[e],e,t)};
 
