--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 						<img src="img/DSGN.png" class="DSGN" alt="logo">
 						<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
-							<a href=""><img src="img/facebook icon.png" alt="facebook"></a>
-							<a href=""><img src="img/twitter icon.png" alt="twitter"></a>
-							<a href=""><img src="img/linkedin icon.png" alt="linkedin"></a>
-							<a href=""><img src="img/g.png" alt="googl"></a>
+							<a href=""><img src="img/fb_green.svg" alt="facebook"></a>
+							<a href=""><img src="img/twitter_green.svg" alt="twitter"></a>
+							<a href=""><img src="img/in_green.svg" alt="linkedin"></a>
+							<a href=""><img src="img/google_green.svg" alt="googl"></a>
 						</div>
 					</div>
 					<div>
@@ -396,10 +396,10 @@
 							<img src="img/DSGN.png" class="DSGN" alt="logo">
 							<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
-							<a href=""><img src="img/facebook icon.png" alt="facebook"></a>
-							<a href=""><img src="img/twitter icon.png" alt="twitter"></a>
-							<a href=""><img src="img/linkedin icon.png" alt="linkedin"></a>
-							<a href=""><img src="img/g.png" alt="googl"></a>
+							<a href=""><img src="img/fb_green.svg" alt="facebook"></a>
+							<a href=""><img src="img/twitter_green.svg" alt="twitter"></a>
+							<a href=""><img src="img/in_green.svg" alt="linkedin"></a>
+							<a href=""><img src="img/google_green.svg" alt="googl"></a>
 						</div>
 					</div>
 			</div>			
