--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 						<img src="img/DSGN.png" class="DSGN" alt="logo">
 						<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
-							<a href=""><img src="img/fb_green.svg" alt="facebook"></a>
-							<a href=""><img src="img/twitter_green.svg" alt="twitter"></a>
-							<a href=""><img src="img/in_green.svg" alt="linkedin"></a>
-							<a href=""><img src="img/google_green.svg" alt="googl"></a>
+							<a href="https://www.facebook.com"><img src="img/fb_green.svg" alt="facebook"></a>
+							<a href="https://twitter.com"><img src="img/twitter_green.svg" alt="twitter"></a>
+							<a href="https://www.linkedin.com"><img src="img/in_green.svg" alt="linkedin"></a>
+							<a href="https://www.google.com"><img src="img/google_green.svg" alt="googl"></a>
 						</div>
 					</div>
 					<div>
@@ -315,10 +315,10 @@
 								<img src="img/arrow_or_left.svg" alt="arrow_or_left">
 							</div>
 							<div class="pipl_social-links">
-								<a href=""><img src="img/fb_orange.png" alt="facebook"></a>
-								<a href=""><img src="img/twitter_orange.png" alt="linkedin"></a>
-								<a href=""><img src="img/social_orange/in_orange.png" alt="linkedin"></a>
-								<a href=""><img src="img/google_orange.png" alt="googl"></a>
+								<a href="https://www.facebook.com"><img src="img/fb_orange.png" alt="facebook"></a>
+								<a href="https://twitter.com"><img src="img/twitter_orange.png" alt="twitter"></a>
+								<a href="https://www.linkedin.com"><img src="img/social_orange/in_orange.png" alt="linkedin"></a>
+								<a href="https://www.google.com"><img src="img/google_orange.png" alt="googl"></a>
 							</div>						
 						</div>	
 					</div>
@@ -331,10 +331,10 @@
 								<img src="img/arrow_or_left.svg" alt="arrow_or_left">
 							</div>
 							<div class="pipl_social-links">
-								<a href=""><img src="img/fb_orange.png" alt="facebook"></a>
-								<a href=""><img src="img/twitter_orange.png" alt="linkedin"></a>
-								<a href=""><img src="img/in_orange.png" alt="linkedin"></a>
-								<a href=""><img src="img/google_orange.png" alt="googl"></a>
+								<a href="https://www.facebook.com"><img src="img/fb_orange.png" alt="facebook"></a>
+								<a href="https://twitter.com"><img src="img/twitter_orange.png" alt="twitter"></a>
+								<a href="https://www.linkedin.com"><img src="img/in_orange.png" alt="linkedin"></a>
+								<a href="https://www.google.com"><img src="img/google_orange.png" alt="googl"></a>
 							</div>						
 						</div>	
 					</div>
@@ -347,10 +347,10 @@
 								<img src="img/arrow_or_left.svg" alt="arrow_or_left">
 							</div>
 							<div class="pipl_social-links">
-								<a href=""><img src="img/fb_orange.png" alt="facebook"></a>
-								<a href=""><img src="img/twitter_orange.png" alt="linkedin"></a>
-								<a href=""><img src="img/in_orange.png" alt="linkedin"></a>
-								<a href=""><img src="img/google_orange.png" alt="googl"></a>
+								<a href="https://www.facebook.com"><img src="img/fb_orange.png" alt="facebook"></a>
+								<a href="https://twitter.com"><img src="img/twitter_orange.png" alt="twitter"></a>
+								<a href="https://www.linkedin.com"><img src="img/in_orange.png" alt="linkedin"></a>
+								<a href="https://www.google.com"><img src="img/google_orange.png" alt="googl"></a>
 							</div>						
 						</div>	
 					</div>
@@ -396,10 +396,10 @@
 							<img src="img/DSGN.png" class="DSGN" alt="logo">
 							<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
-							<a href=""><img src="img/fb_green.svg" alt="facebook"></a>
-							<a href=""><img src="img/twitter_green.svg" alt="twitter"></a>
-							<a href=""><img src="img/in_green.svg" alt="linkedin"></a>
-							<a href=""><img src="img/google_green.svg" alt="googl"></a>
+							<a href="https://www.facebook.com"><img src="img/fb_green.svg" alt="facebook"></a>
+							<a href="https://twitter.com"><img src="img/twitter_green.svg" alt="twitter"></a>
+							<a href="https://www.linkedin.com"><img src="img/in_green.svg" alt="linkedin"></a>
+							<a href="https://www.google.com"><img src="img/google_green.svg" alt="googl"></a>
 						</div>
 					</div>
 			</div>			
