--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 						<img src="img/DSGN.png" class="DSGN" alt="logo">
 						<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
-							<a href="https://www.facebook.com"><img src="img/fb_green.svg" alt="facebook"></a>
-							<a href="https://twitter.com"><img src="img/twitter_green.svg" alt="twitter"></a>
-							<a href="https://www.linkedin.com"><img src="img/in_green.svg" alt="linkedin"></a>
-							<a href="https://www.google.com"><img src="img/google_green.svg" alt="googl"></a>
+							<a href="https://www.facebook.com" class="hov"><img src="img/fb_green.svg" alt="facebook"></a>
+							<a href="https://twitter.com" class="hov"><img src="img/twitter_green.svg" alt="twitter"></a>
+							<a href="https://www.linkedin.com" class="hov"><img src="img/in_green.svg" alt="linkedin"></a>
+							<a href="https://www.google.com" class="hov"><img src="img/google_green.svg" alt="googl"></a>
 						</div>
 					</div>
 					<div>
@@ -37,9 +37,9 @@
 					  <div class="section">
 					  <div class="menu-block">
 					    <nav class="menu-nav">
-					      <a href="#projects">PROJECTS</a>
-					      <a href="#studio">STUDIO</a>
-					      <a href="#news">NEWS</a>
+					      <a href="#projects" class="hov">PROJECTS</a>
+					      <a href="#studio" class="hov">STUDIO</a>
+					      <a href="#news" class="hov">NEWS</a>
 					    </nav>
 					    <a href="#" class="menu-btn">
 					      <span></span>
@@ -66,11 +66,11 @@
 							<div class="link_box_three">
 								<div>
 									<ul class="hide_arow">
-										<li><a href="javascript:void(0);" class="first-link-arrow">All</a></li>
-										<li><a href="javascript:void(0);" class="second-link-arrow">House</a></li>
-										<li><a href="javascript:void(0);"  class="third-link-arrow">Commercial </a></li>
-										<li><a href="javascript:void(0);" class="fourth-link-arrow">Personal</a></li>
-										<li><a href="javascript:void(0);" class="fifth-link-arrow">Studio Lab</a></li>
+										<li><a href="javascript:void(0);" class="first-link-arrow hov">All</a></li>
+										<li><a href="javascript:void(0);" class="second-link-arrow hov">House</a></li>
+										<li><a href="javascript:void(0);"  class="third-link-arrow hov">Commercial </a></li>
+										<li><a href="javascript:void(0);" class="fourth-link-arrow hov">Personal</a></li>
+										<li><a href="javascript:void(0);" class="fifth-link-arrow hov">Studio Lab</a></li>
 									</ul>
 								</div>
 							</div>				
@@ -86,7 +86,7 @@
 								</div>
 								<div class="arrow_text_centr">
 									<img src="img/arrow_orange.svg" class="arrow icon" alt="arrow icon">
-									<a href="javascript:void(0);"><p>view project</p></a>
+									<a href="javascript:void(0); class="hov""><p>view project</p></a>
 								</div>
 								<div class="heart_text_bottom">
 									<img src="img/heart.svg" class="img_heart" alt="img_heart">
@@ -104,7 +104,7 @@
 								</div>
 								<div class="five_arrow_text_centr">
 									<img src="img/arrow_orange.svg" class="arrow icon" alt="arrow icon">
-									 <a href="javascript:void(0);"><p>view project</p></a>
+									 <a href="javascript:void(0);" class="hov"><p>view project</p></a>
 								</div>
 								<div class="five_heart_text_bottom">
 									<img src="img/heart.svg" class="img_heart" alt="img_heart">
@@ -124,7 +124,7 @@
 								<div class="six_col_right">
 									<div class="six_arrow_text_centr">
 										<img src="img/arrow_orange.svg" class="six_arrow_icon" alt="arrow icon">
-										<a href="javascript:void(0);"><p>view project</p></a>
+										<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 									</div>
 									<div class="six_heart_text_bottom">
 										<img src="img/heart.svg" class="six_img_heart" alt="img_heart">
@@ -147,7 +147,7 @@
 								</div>
 								<div class="seven_arrow_text_centr">
 									<img src="img/arrow_orange.svg" class="seven_arrow_icon" alt="arrow icon">
-									<a href="javascript:void(0);"><p>view project</p></a>
+									<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 								</div>
 								<div class="seven_heart_text_bottom">
 									<img src="img/heart.svg" class="img_heart" alt="img_heart">
@@ -166,7 +166,7 @@
 								<div class="eight_second_column">
 									<div class="eight_arrow_text_centr">
 										<div><img src="img/arrow_orange.svg" class="eight_arrow_icon" alt="arrow icon"></div>
-										<a href="javascript:void(0);"><p>view project</p></a>
+										<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 									</div>
 									<div class="eight_heart_text_bottom">
 										<img src="img/heart.svg" class="img_heart" alt="img_heart">
@@ -183,7 +183,7 @@
 								</div>
 								<div class="nine_arrow_text_centr">
 									<img src="img/arrow_orange.svg" class="nine_arrow_icon" alt="arrow icon">
-									<a href="javascript:void(0);"><p>view project</p></a>
+									<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 								</div>
 								<div class="nine_heart_text_bottom">
 									<img src="img/heart.svg" class="nine_img_heart" alt="img_heart">
@@ -205,7 +205,7 @@
 									<div class="center_arrow_text_centr">
 										<div><img src="img/arrow_orange.svg" class="flex_center_one_arrow_icon" alt="arrow icon">
 										</div>
-										<a href="javascript:void(0);"><p>view project</p></a>
+										<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 									</div>
 									<div class="flex_center_one_heart_text_bottom">
 										<img src="img/heart.svg" class="flex_center_one_img_heart" alt="img_heart">
@@ -225,7 +225,7 @@
 							<div class="f_c_t">
 								<div class="flex_center_two_arrow_text_centr">
 									<img src="img/arrow_orange.svg" class="arrow icon" alt="arrow icon">
-									<a href="javascript:void(0);"><p>view project</p></a>
+									<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 								</div>
 								<div class="flex_center_two_heart_text_bottom">
 									<img src="img/heart.svg" class="img_heart" alt="img_heart">
@@ -242,11 +242,11 @@
 						<div class="flex_center_three_link_box">
 								<div class="flex_center_three-link hide_arow">
 									<ul>
-										<li><a href="javascript:void(0);" class="second-link-arrow">2014</a></li>
-										<li><a href="javascript:void(0);" class="third-link-arrow">2013</a></li>
-										<li><a href="javascript:void(0);" class="fourth-link-arrow">2012 </a></li>
-										<li><a href="javascript:void(0);" class="fifth-link-arrow">2011</a></li>
-										<li><a href="javascript:void(0);" class="first-link-arrow">2010</a></li>
+										<li><a href="javascript:void(0);" class="second-link-arrow hov">2014</a></li>
+										<li><a href="javascript:void(0);" class="third-link-arrow hov">2013</a></li>
+										<li><a href="javascript:void(0);" class="fourth-link-arrow hov">2012 </a></li>
+										<li><a href="javascript:void(0);" class="fifth-link-arrow hov">2011</a></li>
+										<li><a href="javascript:void(0);" class="first-link-arrow hov">2010</a></li>
 									</ul>
 								</div>
 						</div>
@@ -327,14 +327,14 @@
 						<p><b>mario bellini</b><br>designer</p>
 						<div class="pipl_link">
 							<div class="p_l">
-								<a href="javascript:void(0);"><h4>CV</h4></a>
+								<a href="javascript:void(0);" class="hov"><h4>CV</h4></a>
 								<img src="img/arrow_or_left.svg" alt="arrow_or_left">
 							</div>
 							<div class="pipl_social-links">
-								<a href="https://www.facebook.com"><img src="img/fb_orange.png" alt="facebook"></a>
-								<a href="https://twitter.com"><img src="img/twitter_orange.png" alt="twitter"></a>
-								<a href="https://www.linkedin.com"><img src="img/in_orange.png" alt="linkedin"></a>
-								<a href="https://www.google.com"><img src="img/google_orange.png" alt="googl"></a>
+								<a href="https://www.facebook.com" class="hov"><img src="img/fb_orange.png" alt="facebook"></a>
+								<a href="https://twitter.com" class="hov"><img src="img/twitter_orange.png" alt="twitter"></a>
+								<a href="https://www.linkedin.com" class="hov"><img src="img/in_orange.png" alt="linkedin"></a>
+								<a href="https://www.google.com" class="hov"><img src="img/google_orange.png" alt="googl"></a>
 							</div>						
 						</div>	
 					</div>
@@ -343,14 +343,14 @@
 						<p><b>patricia urquiola</b><br>designer</p>
 						<div class="pipl_link">
 							<div class="p_l">
-								<a href="javascript:void(0);"><h4>CV</h4></a>
+								<a href="javascript:void(0);" class="hov"><h4>CV</h4></a>
 								<img src="img/arrow_or_left.svg" alt="arrow_or_left">
 							</div>
 							<div class="pipl_social-links">
-								<a href="https://www.facebook.com"><img src="img/fb_orange.png" alt="facebook"></a>
-								<a href="https://twitter.com"><img src="img/twitter_orange.png" alt="twitter"></a>
-								<a href="https://www.linkedin.com"><img src="img/in_orange.png" alt="linkedin"></a>
-								<a href="https://www.google.com"><img src="img/google_orange.png" alt="googl"></a>
+								<a href="https://www.facebook.com" class="hov"><img src="img/fb_orange.png" alt="facebook"></a>
+								<a href="https://twitter.com" class="hov"><img src="img/twitter_orange.png" alt="twitter"></a>
+								<a href="https://www.linkedin.com" class="hov"><img src="img/in_orange.png" alt="linkedin"></a>
+								<a href="https://www.google.com" class="hov"><img src="img/google_orange.png" alt="googl"></a>
 							</div>						
 						</div>	
 					</div>
@@ -369,14 +369,14 @@
 					<p>11.07.2014</p>
 					<img src="img/new_1.jpg" alt="new_1">
 					<p>Maecenas imperdiet nisi lorem, sed fermentum tortor pretium eget. Sed mollis lacus quis nunc cursus cursus. Quisque et magna sit amet sapien fermentum scelerisque eu id massa. Mauris ornare massa vel mauris tempus, vitae tempus urna tincidunt.</p>
-					<a href="javascript:void(0);">read more</a>
+					<a href="javascript:void(0);" class="hov">read more</a>
 				</div>
 				<div class="news_text_right" >
 					<p>Proin vehicula nibh massa</p>
 					<p><br><br>11.06.2014</p>
 					<img src="img/new_2.jpg" alt="new_2">
 					<p>Maecenas imperdiet nisi lorem, sed fermentum tortor pretium eget. Sed mollis lacus quis nunc cursus cursus. Quisque et magna sit amet sapien fermentum scelerisque eu id massa. Mauris ornare massa vel mauris tempus, vitae tempus urna tincidunt.</p>
-					<a href="javascript:void(0);">read more</a>
+					<a href="javascript:void(0);" class="hov">read more</a>
 				</div>
 			</div>
 		</div>	
@@ -396,10 +396,10 @@
 							<img src="img/DSGN.png" class="DSGN" alt="logo">
 							<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
-							<a href="https://www.facebook.com"><img src="img/fb_green.svg" alt="facebook"></a>
-							<a href="https://twitter.com"><img src="img/twitter_green.svg" alt="twitter"></a>
-							<a href="https://www.linkedin.com"><img src="img/in_green.svg" alt="linkedin"></a>
-							<a href="https://www.google.com"><img src="img/google_green.svg" alt="googl"></a>
+							<a href="https://www.facebook.com" class="hov"><img src="img/fb_green.svg" alt="facebook"></a>
+							<a href="https://twitter.com" class="hov"><img src="img/twitter_green.svg" alt="twitter"></a>
+							<a href="https://www.linkedin.com" class="hov"><img src="img/in_green.svg" alt="linkedin"></a>
+							<a href="https://www.google.com" class="hov"><img src="img/google_green.svg" alt="googl"></a>
 						</div>
 					</div>
 			</div>			
