--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								</div>
 								<div class="arrow_text_centr">
 									<img src="img/arrow_orange.svg" class="arrow icon" alt="arrow icon">
-									<a href="javascript:void(0); class="hov""><p>view project</p></a>
+									<a href="javascript:void(0);" class="hov"><p>view project</p></a>
 								</div>
 								<div class="heart_text_bottom">
 									<img src="img/heart.svg" class="img_heart" alt="img_heart">
@@ -311,14 +311,14 @@
 						<p><b>philippe starck</b><br>designer</p>
 						<div class="pipl_link">
 							<div class="p_l">
-								<a href="javascript:void(0);"><h4>CV</h4></a>
+								<a href="javascript:void(0);" class="hov"><h4>CV</h4></a>
 								<img src="img/arrow_or_left.svg" alt="arrow_or_left">
 							</div>
 							<div class="pipl_social-links">
-								<a href="https://www.facebook.com"><img src="img/fb_orange.png" alt="facebook"></a>
-								<a href="https://twitter.com"><img src="img/twitter_orange.png" alt="twitter"></a>
-								<a href="https://www.linkedin.com"><img src="img/social_orange/in_orange.png" alt="linkedin"></a>
-								<a href="https://www.google.com"><img src="img/google_orange.png" alt="googl"></a>
+								<a href="https://www.facebook.com" class="hov"><img src="img/fb_orange.png" alt="facebook"></a>
+								<a href="https://twitter.com" class="hov"><img src="img/twitter_orange.png" alt="twitter"></a>
+								<a href="https://www.linkedin.com" class="hov"><img src="img/social_orange/in_orange.png" alt="linkedin"></a>
+								<a href="https://www.google.com" class="hov"><img src="img/google_orange.png" alt="googl"></a>
 							</div>						
 						</div>	
 					</div>
