--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					      <a href="#projects" class="hov">PROJECTS</a>
 					      <a href="#studio" class="hov">STUDIO</a>
 					      <a href="#news" class="hov">NEWS</a>
+					      <a href="#map" class="hov">MAP</a>
 					    </nav>
 					    <a href="#" class="menu-btn">
 					      <span></span>
@@ -383,7 +384,7 @@
 <!--block with news end-->
 
 <!--block with map start-->
-		<div class="footer">
+		<div class="footer" id="map">
 				<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3316.8220661313903!2d-118.19152718448976!3d33.76526358068497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd313b68c4eae7%3A0x69f1fff3cb508d42!2sLong+Beach+Convention+%26+Entertainment+Center!5e0!3m2!1suk!2sua!4v1540736647045"  style="border:0" allowfullscreen></iframe>	
 
 			<div class="contacts">
