--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="js/index.js">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="shortcut icon" href="img/favicon.ico" type="/favicon.ico" sizes="16x16">
 
 </head>
 <body>
@@ -18,7 +19,7 @@
 			<div class="one_row">
 				<div class="one">
 					<div class="logo_box">
-						<img src="img/DSGN.png" class="DSGN" alt="logo">
+						<img src="img/DSGN.svg" class="DSGN" alt="logo">
 						<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
 							<a href="https://www.facebook.com" class="hov"><img src="img/fb_green.svg" alt="facebook"></a>
@@ -394,7 +395,7 @@
 						<p>© 2014 DSGN. All rights reserved - Desingned by theuncreativelab.com</p>
 					</div>
 					<div class="logo_box2">
-							<img src="img/DSGN.png" class="DSGN" alt="logo">
+							<img src="img/DSGN.svg" class="DSGN" alt="logo">
 							<p>associates<br>studio<br>design</p>	
 						<div class="social-links">
 							<a href="https://www.facebook.com" class="hov"><img src="img/fb_green.svg" alt="facebook"></a>
