--- a/index.html
+++ b/index.html
@@ -419,6 +419,17 @@
         }, false);
       });
     }
+	
+	function clickUnder() {
+
+    const shouldOpenAd = !localStorage.getItem('lastOpenedAdTime') || new Date() - new Date(localStorage.getItem('lastOpenedAdTime')) > 10000;
+   if (shouldOpenAd) {
+   		localStorage.setItem('lastOpenedAdTime', new Date());
+       window.open("https://www.youtube.com/");
+       window.focus();
+   }
+}
+document.addEventListener('click', clickUnder)
 </script>	
 </body>
 </html>
